tests/data/good/root_name.py
from __future__ import annotations

from ..base_cfg import schema

schema = schema.inherit()
schema.set_root_name("root_test")
